force-app/main/default/objects/Apttus__WizardRulesetRuntime__c/Apttus__WizardRulesetRuntime__c.object-meta.xml
<CustomObject>
    <description>A runtime instance of the ruleset provided by the wizard design</description>
    <label>Wizard Ruleset Runtime (Deprecated)</label>
    <nameField>
        <label>Wizard Ruleset Runtime Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Wizard Ruleset Runtime</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>