force-app/main/default/objects/Apttus__WizardRulesetRuntime__c/fields/Apttus__FocusObjectName__c.field-meta.xml
<CustomField>
    <fullName>Apttus__FocusObjectName__c</fullName>
    <description>Name of the focus object if one is determined by this ruleset. If none is determined, this value would be null.</description>
    <inlineHelpText>Name of the focus object if one is determined by this ruleset. If none is determined, this value would be null.</inlineHelpText>
    <label>Focus Object Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>