force-app/main/default/objects/Apttus__WizardRulesetRuntime__c/fields/Apttus__RecordTypeName__c.field-meta.xml
<CustomField>
    <fullName>Apttus__RecordTypeName__c</fullName>
    <description>Name of the Record Type if one is determined by this ruleset. If none is determined, this value would be null.</description>
    <inlineHelpText>Name of the Record Type if one is determined by this ruleset. If none is determined, this value would be null.</inlineHelpText>
    <label>Record Type Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>