force-app/main/default/objects/Apttus__WizardRulesetRuntime__c/fields/Apttus__WizardRulesetId__c.field-meta.xml
<CustomField>
    <fullName>Apttus__WizardRulesetId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference/Lookup to wizard ruleset</description>
    <inlineHelpText>Reference/Lookup to wizard ruleset</inlineHelpText>
    <label>Wizard Ruleset</label>
    <referenceTo>Apttus__WizardRuleset__c</referenceTo>
    <relationshipName>WizardRulesetRuntime1</relationshipName>
    <type>Lookup</type>
</CustomField>