force-app/main/default/objects/Apttus__WizardRulesetRuntime__c/fields/Apttus__WizardStepRuntimeId__c.field-meta.xml
<CustomField>
    <fullName>Apttus__WizardStepRuntimeId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference/Lookup to wizard step runtime</description>
    <inlineHelpText>Reference/Lookup to wizard step runtime</inlineHelpText>
    <label>Wizard Step Runtime</label>
    <referenceTo>Apttus__WizardStepRuntime__c</referenceTo>
    <relationshipName>WizardRulesetRuntime1</relationshipName>
    <type>Lookup</type>
</CustomField>